--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 spring.application.name=billingProject
 
-server.port=8080
+server.port=9090
 
-# --- DataSource Settings ---
-spring.datasource.url=jdbc:mysql://localhost:3308/inventory
+## --- DataSource Settings ---
+#spring.datasource.url=jdbc:mysql://localhost:3308/inventory
+spring.datasource.url=jdbc:mysql://127.0.0.1:3308/inventory
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Root@123
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3308/inventory?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+
 
 # --- JPA / Hibernate ---
 spring.jpa.hibernate.ddl-auto=update
@@ -18,6 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # --- NOTNULL: JSON INCLUDE NOT NULL ---
 spring.jackson.default-property-inclusion=non_empty
 spring.main.allow-bean-definition-overriding=true
+
 
 
 
